# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.32.8
	Martin Väth <martin at mvath.de>:
	- Change MATCH_ALGORITHM_EXACT so that --exact is default if the match
	  field contains _only_ things like USE-flags, sets, EAPI, or SLOT
	  and search string does not look like a regex/pattern.
	  This may cause a surprising change of behaviour and might perhaps be
	  reverted.
	- Change MATCH_ALGORITHM_SUBSTRING to apply if match field contains
	  only category/version and search string does not look like a
	  regex/pattern.
	- Extend DEFAULT_MATCH_ALGORITHM to allow checking for match field(s).

*eix-0.32.7
	Martin Väth <martin at mvath.de>:
	- internal: provide and use eix::array instead of hacks
	- internal: provide rudimentary eix::forward_list if necessary
	- internal: use std::.. for documented functions from #include <c...>
	- internal: remove UNUSED hackery
	- contrib/make.sh: Improve clang filtering

*eix-0.32.6
	Martin Väth <martin at mvath.de>:
	- Fix compilation with C++98 (regression from eix-0.32.5), see
	  https://github.com/vaeth/eix/issues/35
	- Make default values of MATCH_FIELD_LICENSE and MATCH_FIELD_EAPI
	  identical to MATCH_FIELD_CATEGORY_NAME so that they never match and
	  are de facto disabled. This hopefully avoids user confusion without
	  breaking user configs. https://bugs.gentoo.org/show_bug.cgi?id=610424
	- Let default value of MATCH_ALGORITH_EXACT be less aggressive

*eix-0.32.5
	Martin Väth <martin at mvath.de>:
	- Fix completion with >=zsh-5.3
	- Find first valid substring for some algorithms when matching package
	  paths, see https://bugs.gentoo.org/show_bug.cgi?id=605978
	- Modify heuristics for default choice of match algorithm
	- Treat category/package:slot/subslot[::repo] as valid for --pipe
	  Previously, words with more than one / had been tacitly ignored
	- Fix duplicate detection with overlays for parsing cache methods
	- Add configure option for treatment of const virtuals